Add imgui integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,16 +12,22 @@ else(CMAKE_BUILD_TYPE STREQUAL "release")
     add_compile_options(-O2 -march=native -flto -pipe)
 endif()
 
-file(GLOB_RECURSE source CONFIGURE_DEPENDS 
+file(GLOB source CONFIGURE_DEPENDS 
     "src/*.cpp"
     "src/glad/glad.c"
 )
 
+file(GLOB imgui_source CONFIGURE_DEPENDS
+    "imgui/*.cpp"
+    "imgui/backends/imgui_impl_glfw.cpp"
+    "imgui/backends/imgui_impl_opengl3.cpp"
+)
+
 add_subdirectory("include/glfw")
 
-add_executable(graphics-engine ${source})
+add_executable(graphics-engine ${source} ${imgui_source})
 
 find_package(OpenMP REQUIRED)
 
-target_include_directories(graphics-engine PUBLIC "include/")
+target_include_directories(graphics-engine PUBLIC "include/" "imgui/" "imgui/backends/")
 target_link_libraries(graphics-engine PUBLIC dl glfw OpenMP::OpenMP_CXX)
